css/botan.css
/* ... */
/* tooltips */
.tooltip[data-v-9401173e] {
    background-color: rgba(var(--color-overlay), 1);
    color: black;
    transition: opacity .26s ease-in-out, transform .4s ease-in-out;
}

.tooltip[data-v-9401173e]:after {
    display: none;
}

.title[data-v-9401173e] {
    background: transparent;
}

/* various dropdowns */
.el-dropdown-menu__item,
.el-select-dropdown__item {
    transition: color .2s ease, background .2s ease;
}

.el-dropdown-menu__item:focus,
.el-dropdown-menu__item:not(.is-disabled):hover,
.el-select-dropdown__item.hover,
.el-select-dropdown__item:hover {
    background: rgb(var(--color-blue), 0.4);
    color: black;
}

/* Headings */
.markdown h1 {
    margin-left: 5px;
    font-weight: 900;
    color: #000;
    text-shadow: rgb(255, 255, 255) 2px 0px 0px, rgb(255, 255, 255) 1.75517px 0.958851px 0px, rgb(255, 255, 255) 1.0806px 1.68294px 0px, rgb(255, 255, 255) 0.141474px 1.99499px 0px, rgb(255, 255, 255) -0.832294px 1.81859px 0px, rgb(255, 255, 255) -1.60229px 1.19694px 0px, rgb(255, 255, 255) -1.97998px 0.28224px 0px, rgb(255, 255, 255) -1.87291px -0.701566px 0px, rgb(255, 255, 255) -1.30729px -1.5136px 0px, rgb(255, 255, 255) -0.421592px -1.95506px 0px, rgb(255, 255, 255) 0.567324px -1.91785px 0px, rgb(255, 255, 255) 1.41734px -1.41108px 0px, rgb(255, 255, 255) 1.92034px -0.558831px 0px;
}

.markdown h5 {
    animation-name: rainbowtext;
    animation-duration: 15s;
    animation-iteration-count: infinite;
}

/* Buttons */
.button.cancel,
.button.save,
.random-btn[data-v-128c06f0],
.save-btn,
.delete-btn,
.unfollow[data-v-39573fe2],
.hohButton,
.compare-btn[data-v-128c06f0],
.el-message-box .el-button {
    border-bottom-left-radius: 15px 255px;
    border-bottom-right-radius: 225px 15px;
    border-top-left-radius: 255px 15px;
    border-top-right-radius: 15px 225px;
    box-shadow: 15px 28px 25px -18px rgba(0, 0, 0, .2);
    transition: all 235ms ease-in-out 0s;
    align-self: center;
    border: 2px solid #000;
    cursor: pointer;

    overflow: hidden;
}

/* background color for buttons */
.button.save,
.random-btn[data-v-128c06f0],
.save-btn,
.delete-btn {
    background: rgba(var(--color-blue), 0.5);
}

/* checkboxes */
.el-checkbox__inner {
    border-radius: 0;
    border: 2px #000 solid;
}

.el-checkbox__input.is-checked .el-checkbox__inner {
    background-color: #553a00;
    border-color: #000000;
}

.el-checkbox__input.is-focus .el-checkbox__inner {
    border-color: #000;
    box-shadow: 0px 0px 2px 3px rgba(255, 255, 255, 1);
}

/* activity dots */
.history-day[data-v-514856af] {
    border-radius: 0;
    border: 2px black solid;
}

.history-day.lv-1[data-v-514856af] {
    background: rgba(var(--color-blue), .1);
}

.history-day.lv-2[data-v-514856af] {
    background: rgba(var(--color-blue), .3);
}

/* fix reply overflow */
.reply[data-v-0bf5aadf] {
    overflow: visible;
}

/* fav studios bg */
.site-theme-dark .overview .favourite.studio {
    background-color: rgb(var(--color-foreground)) !important;
}

/* option pills */
.options,
.heading[data-v-72dc5b51] .switch .option,
.options[data-v-05bb5e72],
.option[data-v-05bb5e72] {
    padding: 10px;
}

.heading[data-v-72dc5b51] .switch,
.switches .switch[data-v-e74f4a6a] {
    height: 70px;
}

.option.active[data-v-05bb5e72] {
    background: rgba(var(--color-blue), .8) !important;
}

/* stats */
/* - title fix */
.title[data-v-0f6464f0]>a {
    margin: 2px;
}

/* remove reviews button */
.nav .link[data-v-5445dac8]:nth-of-type(7) {
    display: none;
}

/* remove donator bs */
.increase-stats[data-v-e74f4a6a] {
    display: none;
}

/* medialist entry rows hover */
.medialist.table .entry .cover .image {
    left: 0;
    transition: left .35s ease-in-out 0s;
}

.medialist.table .list-wrap {
    position: relative;
}

.medialist.table .list-section {
    z-index: 10;
}

.medialist.table .entry {
    position: static;
}

.medialist.table .entry .cover .image {
    z-index: 200;
}

.medialist.table .entry:hover .cover .image {
    border-radius: 3px;
    box-shadow: 0 2px 20px rgba(49, 54, 68, .3);
    display: block;
    height: 200px;
    left: auto;
    padding: 0;
    position: absolute;
    top: auto;
    width: 140px;
}

.medialist.table .entry .title {
    transition: all .35s ease-in-out 0s;
}

.medialist.table .entry:hover .title {
    padding-left: 15px;
}

.medialist.table .entry .cover {
    transition: .35s ease-in-out;
}

.medialist.table .entry:hover .cover {
    min-width: 1px;
    max-width: 1px;
}

/* donator badge */
.donator-badge[data-v-568e7548] {
    background: rgb(var(--color-foreground-grey));
}

/* right border on list entry detail */
.list .details[data-v-568e7548] {
    border-left: #000 2px solid;
}

/* message box input */
.el-message-box .el-input__inner {
    background: rgba(var(--color-foreground-grey));
}

.percentage-bar[data-v-aedb6876] {
    display: none;
}

/* avatar background animation (scrapped) */
@keyframes avatarbg {
    0% {
        background-position: 0 0;
    }

    to {
        background-position: 0 100%;
    }
}

/* rainbow text */
@keyframes rainbowtext {
    0% {
        color: rgba(0, 105, 255, .71)
    }

    10% {
        color: rgba(100, 0, 255, .71)
    }

    20% {
        color: rgba(255, 0, 139, .71)
    }

    30% {
        color: rgba(255, 0, 0, .71)
    }

    40% {
        color: rgba(255, 96, 0, .71)
    }

    50% {
        color: rgba(202, 255, 0, .71)
    }

    60% {
        color: rgba(0, 255, 139, .71)
    }

    70% {
        color: rgba(202, 255, 0, .71)
    }

    80% {
        color: rgba(255, 96, 0, .71)
    }

    85% {
        color: rgba(255, 0, 0, .71)
    }

    90% {
        color: rgba(255, 0, 139, .71)
    }

    95% {
        color: rgba(100, 0, 255, .71)
    }

    to {
        color: rgba(0, 105, 255, .71)
    }
}

